--- a/job-run/config/app.yaml
+++ b/job-run/config/app.yaml
@@ -5,5 +5,6 @@ application:
   requirements_txt_path: "./aws/TEMPLATE/lambda_layer_lib/requirements.txt"
   aws_cdk_venv_activate_path: "./aws/TEMPLATE/.venv/bin/activate"
   aws_cdk_folder: "./aws/TEMPLATE/"
+  job_base_url: "http://localhost:8081/v1"
 
   
